# chippi

./: .gitmodules  CMakeLists.txt  README.md  chippi.cpp  std.txt
src/: main.cpp
src/chip8/: base.cpp  base.h
src/display/: display.h  imgui_sdl.h  sdl.h
